# install-qt-creator

./: .gitignore  README.md  pyproject.toml
install_qt_creator/: desktop.py  main.py
